---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 8 August 2020
  Add:
  - Pyanodon's mods
  - Waterfill
  - inland pumps
  - The Fat Controller
  Remove:
  - AAI Crafting Tab
  - RSO
---------------------------------------------------------------------------------------------------
Version: 0.1.13
Date: 22 August 2019
  Added Disco Science
---------------------------------------------------------------------------------------------------
Version: 0.1.12
Date: 22 August 2019
  Add deadlock's crating and mod integration
---------------------------------------------------------------------------------------------------
Version: 0.1.11
Date: 22 August 2019
  Add max rate calculator
---------------------------------------------------------------------------------------------------
Version: 0.1.10
Date: 22 August 2019
  Remove All Bob's Furnaces are Multipurpose to fix a crafting bug
---------------------------------------------------------------------------------------------------
Version: 0.1.9
Date: 21 August 2019
  Add far reach
---------------------------------------------------------------------------------------------------
Version: 0.1.8
Date: 21 August 2019
  Removed quickstart mod
---------------------------------------------------------------------------------------------------
Version: 0.1.7
Date: 21 August 2019
  Removed space exploration and tweaked optionals
---------------------------------------------------------------------------------------------------
Version: 0.1.6
Date: 21 August 2019
  Add:
  - Space Exploration Graphics
  - Space Exploration Postprocess
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 21 August 2019
  Make Optional:
  - Angels Infinite Ores
  - RSO
  - Bob's Modules
  Add:
  - Grappling Hook
  - Space Exploration Hi Res Graphics
  Add optional quickstart mod 